Add monitor stats
